--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,38 @@
+
+
+:root {
+  --background: rgba(255, 255, 255, 0.1);
+  --color: #b0bbc7;
+  --color2: rgba(255, 255, 255, 0.75);
+  --primary-rgb: 77, 238, 234;
+  --background-rgb: 18, 55, 61;
+  --main-gradient-bg: radial-gradient(
+    circle,
+    rgb(var(--background-rgb)) 0%,
+    #121923,
+    #121923 100%
+
+  );
+  --secondary-rgb: 249, 248, 113;
+  --primary01: rgba(var(--primary-rgb), 0.1);
+  --primary02: rgba(var(--primary-rgb), 0.2);
+  --primary03: rgba(var(--primary-rgb), 0.3);
+  --primary04: rgba(var(--primary-rgb), 0.4);
+  --primary05: rgba(var(--primary-rgb), 0.5);
+  --primary06: rgba(var(--primary-rgb), 0.6);
+  --primary07: rgba(var(--primary-rgb), 0.7);
+  --primary08: rgba(var(--primary-rgb), 0.8);
+  --primary09: rgba(var(--primary-rgb), 0.9);
+  --primary005: rgba(var(--primary-rgb), 0.05);
+}
 .App {
   text-align: center;
+  background: radial-gradient(circle, rgb(var(--background-rgb)) 0%, #121923, #121923 100%) !important;
+    
+  box-shadow: 0 0 5px var(--primary-bg-color);
+  background-color: var(--primary01);
+  background-position: center 64px;
+  background-repeat: no-repeat;
 }
 
 .App-logo {
