--- a/src/App.css
+++ b/src/App.css
@@ -27,12 +27,12 @@
 }
 .App {
   text-align: center;
-  background: radial-gradient(circle, rgb(var(--background-rgb)) 0%, #121923, #121923 100%) !important;
+  /* background: radial-gradient(circle, rgb(var(--background-rgb)) 50%, #121923, #121923 100%) !important;
     
   box-shadow: 0 0 5px var(--primary-bg-color);
   background-color: var(--primary01);
   background-position: center 64px;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 .App-logo {
