made_responisve_changes

--- a/src/Components/Main_dra/Main_dra.css
+++ b/src/Components/Main_dra/Main_dra.css
@@ -134,6 +134,9 @@ color: #B0bbc7 !important;
 .moblie_view{
     margin-top: 20px !important;
 }
+.responsive_clr{
+    color: white !important ;
+}
 
 
     .Br_ps{
