--- a/src/Components/Home_dash/Home_dash.css
+++ b/src/Components/Home_dash/Home_dash.css
@@ -90,12 +90,28 @@ body{
     appearance: none;
     border-radius: 0.25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    border: 1px solid rgb(77, 238, 234,0.1) !important;
+}
+.input-group-text{
+    border: 1px solid rgb(77, 238, 234,0.1) !important; 
+  
+}
+.input-group-text{
+    background-color:rgba(216, 27, 27, 0.03) !important;
+    /* background: red !important; */
+}
+
+.form-control:focus{
+    border: 1px solid rgb(77,238,234) !important ;
+    box-shadow:  none !important;
 }
 
 .input-group-text{
-    background-color: transparent !important;
+    /* background-color: transparent !important; */
     color: white !important;
 }
+
+
 
 
 .sisis{
