--- a/src/Components/Main_dra/Main_dra.css
+++ b/src/Components/Main_dra/Main_dra.css
@@ -20,6 +20,27 @@ border: none !important;
 outline: none !important;
 }
 
+.react_card_widthdrawal{
+    border-radius: 5px !important;
+    margin-block-end: 1.5rem !important;
+    box-shadow: inset 0px -1px 12px 3px rgb(255 255 255 / 5%) !important;
+    background-color: transparent !important;
+    background-position: center top !important;
+    background-repeat: no-repeat !important;
+    content: "" !important;
+    inset-inline-start: 0 !important;
+    inset-inline-end: 0 !important;
+    border: none !important;
+}
+
+
+.responsive_lebal{
+    margin-top: 10px !important;
+    margin-bottom: 0px  !important;
+}
+
+
+
 
 .drawer_side_headding{
     color: rgba(77, 238, 234) !important;
@@ -137,6 +158,13 @@ color: #B0bbc7 !important;
 .responsive_clr{
     color: white !important ;
 }
+.responsive_margin{
+    margin: 0px auto !important ;
+}
+
+.text_responsive{
+    width: 300px !important;
+}
 
 
     .Br_ps{
@@ -178,6 +206,10 @@ color: #B0bbc7 !important;
 .react_table_responisve{
     width: 300px !important;
     overflow-x: scroll !important;
+}
+.there{
+
+    margin-bottom: 15px !important;
 }
     
 }
