--- a/src/Components/Main_dra/Main_dra.css
+++ b/src/Components/Main_dra/Main_dra.css
@@ -174,6 +174,10 @@ color: #B0bbc7 !important;
     .res_Ponsive_mt{
         margin-top: 10px !important;
     }
+    .respon_aligment{
+        text-align: left !important;
+        padding-left: 10px !important;
+    }
     .main_table_react{
         overflow-x: scroll !important;
     }
