--- a/src/Components/Main_dra/Main_dra.css
+++ b/src/Components/Main_dra/Main_dra.css
@@ -93,11 +93,23 @@ outline: none !important;
     border-radius: 5px !important;
 }
 
+.react_font_weight{
+    font-weight: 550 !important;
+}
 
 .main_table_th{
     background-color: transparent !important;
     border: 1px solid rgb(77, 238, 234,0.1) !important;
+    color: #e3e3e8 !important;
+    font-weight:600 !important;
+    background: #ffffff08 !important;
    
+}
+
+.network_veiw{
+    box-shadow: none !important;
+    outline: none !important;
+    border:  none !important;
 }
 .react_Tr{
     border-bottom: 1px solid rgb(77, 238, 234,0.1) !important;
