--- a/src/Components/Main_dra/Main_dra.css
+++ b/src/Components/Main_dra/Main_dra.css
@@ -224,6 +224,7 @@ color: #B0bbc7 !important;
 .react_table_responisve{
     width: 300px !important;
     overflow-x: scroll !important;
+    margin: 0px auto !important;
 }
 .there{
 
